--- a/src/sass/utlities/_layout.scss
+++ b/src/sass/utlities/_layout.scss
@@ -5,10 +5,13 @@
 // 	display: none;
 // }
 
+
+
+
 html {
 	box-sizing: border-box;
-	scroll-behavior: auto
-
+	scroll-behavior: auto;
+	overflow-x: hidden;
 }
 
 
